# forge

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
demo/: __init__.py  train.py
demo/conf/: config.yaml  runtime.yaml
forge/: __init__.py  cli.py  commands.py  core.py  display.py  matching.py
