[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "Minimal experiment management using Hydra and OmegaConf"
requires-python = ">=3.10"
dependencies = ["hydra-core>=1.3", "omegaconf>=2.3", "prettytable>=3.0", "argcomplete>=3.0"]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*", "demo*"]
